# testlangchain

./: .env  CLAUDE.md  lession-tool2.ipynb  lesson-agent.ipynb  lesson-message.ipynb  lesson-model.ipynb  main.py  model-1.ipynb  pyproject.toml  uv.toml
